prevent overlapping of grid items by removing negative margin

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ a {
 
 .menu-align {
   margin-left: 55px;
-  margin-right: -150px;
+  /* margin-right: -150px; */
 }
 
 img {
